--- a/app/app.css
+++ b/app/app.css
@@ -1,8 +1,10 @@
 @import "tailwindcss";
+@plugin "daisyui";
 
 @theme {
-  --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
+  --font-sans: "Roboto", ui-sans-serif, system-ui, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-mono: "Rubik";
 }
 
 html,
